--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <div style="height: -webkit-fill-available;">
+  <lib-chinna-library></lib-chinna-library>
   <button routerLink="/children/customer">Customers</button>
   <button routerLink="/children/order">Orders</button>
 </div>
