--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,4 @@
 <div style="height: -webkit-fill-available;">
-  <lib-chinna-library></lib-chinna-library>
-  <button routerLink="/children/customer">Customers</button>
-  <button routerLink="/children/order">Orders</button>
+  <button routerLink="/form1">form1</button>
+  <button routerLink="/form2">form2</button>
 </div>
